[package]
name = "rust_verusd_rpc_server"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.5", features = ["full", "server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
jsonrpc = "0.18"
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
once_cell = "1.19"
uuid = { version = "1.10", features = ["v4", "fast-rng"] }
governor = "0.6"
dashmap = "5.5"
tokio-rustls = "0.26"
rustls-pemfile = "2.0"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
wiremock = "0.6"