[package]
name = "rust_verusd_rpc_server"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.5", features = ["full", "server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonrpc = "0.18"
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
once_cell = "1.19"
uuid = { version = "1.10", features = ["v4", "fast-rng"] }
governor = "0.6"
dashmap = "5.5"
prometheus = { version = "0.14", features = ["process"] }
lazy_static = "1.4"
parking_lot = "0.12"
lru = "0.12"
ipnetwork = "0.20"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
wiremock = "0.6"
toml = "0.8"